UI tweaks on choose teams page
Make angular app name consistent with syntax.  Minor cleanup.

--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,5 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html lang="en" ng-app="myApp" class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html lang="en" ng-app="myApp" class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html lang="en" ng-app="myApp" class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> 
 <html lang="en" class="no-js"> 
-  <!--<![endif]-->
   <head>
     <base href="/" />
     <meta charset="utf-8">
@@ -14,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="/app/styles.css">
   </head>
-  <body ng-app="leaguehutBaseball" class="no-margin">
+  <body ng-app="leagueHutBaseball" class="no-margin">
     <ng-view></ng-view>
     <script src="/app/main.js"></script> 
   </body>
