--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>LeagueHut Baseball</title>
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=850, initial-scale=0.4">
     <link rel="stylesheet" type="text/css" href="/app/styles.css">
   </head>
   <body ng-app="leagueHutBaseball" class="no-margin">
